added openbadges-bakery to project requirements

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "jayschema": "*",
     "mongodb": "*",
-    "monk": "*"
+    "monk": "*",
+    "openbadges-bakery": "*"
   }
 }
