made a bunch of cool tests; they were working, but there's a timeout problem somewhere.......

--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "jayschema": "*",
     "mongodb": "*",
     "monk": "*",
-    "openbadges-bakery": "*"
+    "openbadges-bakery": "*",
+    "mongoose": "*"
+  },
+  "devDependencies": {
+  	"tap":"*"
+  },
+  "scripts": {
+  	"test": "tap test/*.test.js"
   }
 }
